:sparkles: [#1421] add 'catalogus' as read-only attribute to zaaktype subresources
