# src/openzaak/components/catalogi/api/serializers/eigenschap.py
@@ -3,6 +3,7 @@
 from drf_writable_nested import NestedCreateMixin, NestedUpdateMixin
 from rest_framework import serializers
 from vng_api_common.serializers import add_choice_values_help_text
+from vng_api_common.utils import get_help_text
 
 from openzaak.utils.validators import UniqueTogetherValidator
 
@@ -36,10 +37,25 @@ class EigenschapSerializer(
     specificatie = EigenschapSpecificatieSerializer(
         source="specificatie_van_eigenschap"
     )
+    catalogus = serializers.HyperlinkedRelatedField(
+        view_name="catalogus-detail",
+        source="zaaktype.catalogus",
+        read_only=True,
+        lookup_field="uuid",
+        help_text=get_help_text("catalogi.ZaakType", "catalogus"),
+    )
 
     class Meta:
         model = Eigenschap
-        fields = ("url", "naam", "definitie", "specificatie", "toelichting", "zaaktype")
+        fields = (
+            "url",
+            "naam",
+            "definitie",
+            "specificatie",
+            "toelichting",
+            "zaaktype",
+            "catalogus",
+        )
         extra_kwargs = {
             "url": {"lookup_field": "uuid"},
             "naam": {"source": "eigenschapnaam"},
